2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: fixed the presence problem.  no more creating new
	  presence objects.

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: moved some comments

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: updated presence

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: fixes for adding to ProviderUserManager

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/ChatWindow.cs: added avatar support back

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonStore.cs: Added a GetPerson with a ProviderUser

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/Application.cs: removed tapioca connection
	* Banter/ConversationManager.cs, Banter/Conversation.cs: removing
	  tapioca contact
	* Banter/ChatWindow.cs: commented out avatar stuff - temporary

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/Application.cs: removed tapioca connection
	* Banter/ConversationManager.cs, Banter/Conversation.cs: removing
	  tapioca contact
	* Banter/ChatWindow.cs: commented out avatar stuff - temporary

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: Added the PresenceUpdated event.  Connected up
	  PresenceUpdated events from ProviderUser.
	* Banter/PersonCard.cs: Hooked up the PresenceUpdated event on a person

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/ConversationManager.cs: removed tapioca contact comparisons 
	* Banter/Conversation.cs: removed Tapioca contact from conversation

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Account.cs: Removed code that added the contact into the
	  Person, it's not needed now because the ProviderUser will handle
	  this
	* Banter/Person.cs: Removed references to TapiocaContact (most of them)
	* Banter/PersonCard.cs: Removed references to TapiocaContact

2007-05-11  Brady Anderson <banderso@novell.com> 
